docs/grammar.ebnf
/* ===================================================
   NERA GRAMMAR v1.6 (Production & Synchronized)
   Last updated: Phase 4.1 – Advanced Slicing & Single Element Indexing
   =================================================== */

Program         ::= Declaration*

Declaration     ::= DataDecl | ChoiceDecl | FnDecl | ExternDecl | VarDecl


/* --- DATA STRUCTURES --- */

DataDecl        ::= "data" Identifier ("(" Identifier ("," Identifier)* ")")? "{" FieldDecl* "}"
FieldDecl       ::= Identifier ":" Type


/* --- ALGEBRAIC DATA TYPES --- */

ChoiceDecl      ::= "choice" Identifier ("(" Identifier ("," Identifier)* ")")? "{" (VariantDecl ","?)* "}"
VariantDecl     ::= Identifier ("(" Type ("," Type)* ")")?


/* --- FUNCTIONS & FFI --- */

ExternDecl      ::= "extern" "fn" Identifier ("(" Identifier ("," Identifier)* ")")? "(" ParamList? ")" ("->" Type)?
FnDecl          ::= "fn" Identifier ("(" Identifier ("," Identifier)* ")")? "(" ParamList? ")" ("->" Type)? Block
ParamList       ::= Param ("," Param)*
Param           ::= "mut"? Identifier ":" Type


/* --- TYPES ---
   ^T         = explicit pointer to T (heap-allocated)
   ?T         = nullable T (None | T); zero-overhead null pointer for pointers
   T[N]       = fixed-length array of N elements of type T
   T[]        = dynamically-sized array (slice) of T
   T(U, V)    = generic type instantiation
*/
Type            ::= "?"? "^"? Identifier ("(" Type ("," Type)* ")")? ("[" Integer? "]")?


/* --- BLOCKS & STATEMENTS --- */

Block           ::= "{" Statement* "}"

Statement       ::= VarDecl
                  | Assignment
                  | IfStmt
                  | WhileStmt
                  | ReturnStmt
                  | ExprStmt

VarDecl         ::= ("let" | "mut") Identifier (":" Type)? "=" Expression
Assignment      ::= Expression ("=" | "+=" | "-=" | "*=" | "/=") Expression
IfStmt          ::= "if" Expression Block ("else" IfStmt | "else" Block)?
WhileStmt       ::= "while" Expression Block
ReturnStmt      ::= "return" Expression?
ExprStmt        ::= Expression


/* --- EXPRESSIONS (precedence: lowest → highest) --- */

Expression      ::= PipeExpr

PipeExpr        ::= LogicalExpr (">>" LogicalExpr)*
LogicalExpr     ::= EqualityExpr (("and" | "or") EqualityExpr)*
EqualityExpr    ::= RelationalExpr (("==" | "!=") RelationalExpr)*
RelationalExpr  ::= AdditiveExpr (("<" | "<=" | ">" | ">=") AdditiveExpr)*
AdditiveExpr    ::= MultiplicativeExpr (("+" | "-") MultiplicativeExpr)*
MultiplicativeExpr ::= PostfixExpr (("*" | "/") PostfixExpr)*

/* Postfix operators (left-associative, chained in a loop):
     expr.field          – field / property access
     expr.method(args)   – method-style call (desugared to free fn call in sema)
     ChoiceName.Variant  – zero-arg variant constructor  (resolved in sema)
     ChoiceName.Variant(args) – variant constructor with payload (resolved in sema)
     expr(args)          – direct function call
     expr^               – pointer dereference
     expr[]              – explicit vector slice / indexing (e.g. swarm.x[])
*/
PostfixExpr     ::= PrimaryExpr ( "." Identifier ( "(" ArgumentList? ")" )?
                                 | "[" (Expression? ".." Expression? | Expression)? "]"
                                 | "(" ArgumentList? ")"
                                 | "^"
                                 )*

PrimaryExpr     ::= Identifier
                  | Literal
                  | ListLiteral
                  | WhenExpr
                  | AllocExpr
                  | "(" Expression ")"

ArgumentList    ::= Expression ("," Expression)*


/* --- HEAP ALLOCATION ---
   alloc T()       allocates a value of type T on the heap.
   alloc T(args)   allocates and initialises fields (data types only).
   Returns ^T.
*/
AllocExpr       ::= "alloc" Type ("(" ArgumentList? ")")?


/* --- PATTERN MATCHING ---
   when targets both 'choice' ADTs and nullable '?T' types.
   For nullable types, use None / val catch-all syntax.
   For ADT types, every variant arm must be listed.
   The final arm may be a bare Identifier to catch remaining values.
*/
WhenExpr        ::= "when" Expression "{" WhenCase+ "}"
WhenCase        ::= WhenPattern "->" Block
WhenPattern     ::= "None"                                        /* nullable null arm   */
                  | Identifier "(" Identifier ("," Identifier)* ")"  /* variant with binding */
                  | Identifier                                    /* variant no-payload or catch-all */


/* --- LITERALS --- */

ListLiteral     ::= "[" ArgumentList? "]"
Literal         ::= Integer | Float | String | Char | Boolean | NoneLiteral
NoneLiteral     ::= "None"                  /* null value for ?T nullable types */
Integer         ::= [0-9]+
Float           ::= [0-9]+ "." [0-9]+
String          ::= '"' [^"]* '"'
Char            ::= "'" [^'] "'"
Boolean         ::= "true" | "false"


/* --- LEXICAL ELEMENTS --- */

Identifier      ::= [a-zA-Z_] [a-zA-Z0-9_]*
LineComment     ::= "//" [^\n]*
BlockComment    ::= "/*" .* "*/"
